Fix regional images on mobile.

--- a/media/css/mobile.css
+++ b/media/css/mobile.css
@@ -93,6 +93,10 @@
 	text-align: center;
 }
 
+#states img {
+  position: absolute;
+}
+
 #videocontainer { 
 	margin: auto;
 	text-align: center;
